infra/deployments/artifacts/dev/frontend/basic-app/templates/deployment.yaml
---
# Source: basic-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app
          image: "registry:5000/cv-frontend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            null
          volumeMounts:
            - name: runtime-config
              mountPath: /usr/share/nginx/html/config.js
              subPath: config.js
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 1
            periodSeconds: 10

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
      volumes:
        - name: runtime-config
          configMap:
            name: frontend-runtime-config
