infra/deployments/artifacts/dev/frontend/basic-app/templates/service-misql.yaml
---
# Source: basic-app/templates/service-misql.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-db
spec:
  type: ClusterIP
  selector:
    app: frontend-db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
