infra/deployments/artifacts/dev/frontend/basic-app/templates/service.yaml
---
# Source: basic-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 
      protocol: TCP
